PD e IS completi, finire musimatica e mobile programming